[project]
name = "media-downloader"
version = "1.0.0"
description = "Media Downloader for download audio and video from various platforms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "streamlit>=1.43.2",
    "yt-dlp>=2025.2.19",
]
